--- a/DataScienceProject.ipynb
+++ b/DataScienceProject.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8b74222c-479e-4c59-abd6-f11699631b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. IMPORTS\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, roc_auc_score, roc_curve"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "05df440b-4fb7-465e-9cb2-036defe8c6f8",
    "metadata": {},
@@ -18,7 +35,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "# 2. LOAD DATA\n",
     "data1 = pd.read_csv(\"data.csv\")\n",
     "data1.head(10)\n",
     "data1.shape"
@@ -42,6 +59,7 @@
     }
    ],
    "source": [
+    "# 2. LOAD DATA\n",
     "data2 = pd.read_csv(\"Breast_Cancer.csv\")\n",
     "data2.head(10)\n",
     "data2.shape"
@@ -53,7 +71,113 @@
    "id": "30fb9522-2cae-4b92-8f2d-fbb25abd21d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 3. BASIC CLEANING\n",
+    "# - drop duplicates\n",
+    "# - fix column names\n",
+    "# - encode targets\n",
+    "# - check missing values\n",
+    "# - describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d6d8cbe-cbc8-44e4-aea7-7c48cf9738c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. EXPLORATORY ANALYSIS\n",
+    "# - class distribution\n",
+    "# - histograms\n",
+    "# - correlation heatmap\n",
+    "# - pairplots\n",
+    "# - boxplots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "571c95ea-7145-4fb0-8552-b52d6badb16c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. DATA PREPROCESSING\n",
+    "# - scaling (if needed)\n",
+    "# - train/test split\n",
+    "# - categorical encoding\n",
+    "# - imputation if needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ff35d7e-bcab-40b0-8ec2-f7c010f25866",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. MODELING DATASET A\n",
+    "# - Logistic Regression\n",
+    "# - RandomForest\n",
+    "# - SVM\n",
+    "# - PCA + model\n",
+    "# - GridSearchCV\n",
+    "# - ROC curve and confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "535a1253-7875-43dc-bbf8-91915a59e833",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. MODELING DATASET B\n",
+    "# - Logistic Regression baseline\n",
+    "# - RandomForest\n",
+    "# - GradientBoosting / XGBoost\n",
+    "# - Neural Network (MLP)\n",
+    "# - Hyperparameter tuning\n",
+    "# - ROC curve, confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec1db08a-54e7-4c7c-b2a6-fab79420d929",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8. FEATURE IMPORTANCE ANALYSIS\n",
+    "# - RF feature importance\n",
+    "# - SHAP (optional)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d0b9dbf-94c3-4bdb-bb8c-1c8d2604b1c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9. RESULTS COMPARISON\n",
+    "# - summary tables\n",
+    "# - accuracy, F1, ROC-AUC vs model\n",
+    "# - visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c08eece-094c-46d1-9d1e-90ce53f79378",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 10. CONCLUSIONS FOR REPORT\n",
+    "# - strengths and weaknesses\n",
+    "# - comparison of datasets\n",
+    "# - future work recommendations"
+   ]
   }
  ],
  "metadata": {
