--- a/DataScienceProject.ipynb
+++ b/DataScienceProject.ipynb
@@ -2,14 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
+
    "execution_count": 6,
-=======
-   "execution_count": null,
-=======
-   "execution_count": 1,
->>>>>>> triin
+
+
    "id": "8b74222c-479e-4c59-abd6-f11699631b7e",
    "metadata": {},
    "outputs": [],
@@ -26,12 +22,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
+
    "execution_count": 5,
->>>>>>> triin
-=======
-   "execution_count": 2,
->>>>>>> triin
+
+
    "id": "05df440b-4fb7-465e-9cb2-036defe8c6f8",
    "metadata": {},
    "outputs": [
@@ -326,7 +320,7 @@
        "</div>"
       ],
       "text/plain": [
-<<<<<<< HEAD
+
        "         id diagnosis  radius_mean  texture_mean  perimeter_mean  area_mean  \\\n",
        "0    842302         M        17.99         10.38          122.80     1001.0   \n",
        "1    842517         M        20.57         17.77          132.90     1326.0   \n",
@@ -387,8 +381,8 @@
        "8                  0.10720          NaN  \n",
        "9                  0.20750          NaN  \n",
        "\n",
-       "[10 rows x 33 columns]"
-=======
+       "[10 rows x 33 columns]",
+
        "(569, 33)"
       ]
      },
@@ -414,7 +408,7 @@
      "data": {
       "text/plain": [
        "(2509, 34)"
->>>>>>> triin
+
       ]
      },
      "execution_count": 3,
@@ -423,435 +417,16 @@
     }
    ],
    "source": [
-<<<<<<< HEAD
-    "import pandas as pd\n",
-    "data1 = pd.read_csv(\"data.csv\")\n",
-    "data1.head(10)\n"
-=======
+
     "# 2. LOAD DATA\n",
     "data2 = pd.read_csv(\"Breast_Cancer.csv\")\n",
     "data2.head(10)\n",
     "data2.shape"
->>>>>>> triin
+
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 5,
-   "id": "5ed8c83e-a61c-4953-9458-e2944f2b6821",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Patient ID</th>\n",
-       "      <th>Age at Diagnosis</th>\n",
-       "      <th>Type of Breast Surgery</th>\n",
-       "      <th>Cancer Type</th>\n",
-       "      <th>Cancer Type Detailed</th>\n",
-       "      <th>Cellularity</th>\n",
-       "      <th>Chemotherapy</th>\n",
-       "      <th>Pam50 + Claudin-low subtype</th>\n",
-       "      <th>Cohort</th>\n",
-       "      <th>ER status measured by IHC</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Overall Survival Status</th>\n",
-       "      <th>PR Status</th>\n",
-       "      <th>Radio Therapy</th>\n",
-       "      <th>Relapse Free Status (Months)</th>\n",
-       "      <th>Relapse Free Status</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>3-Gene classifier subtype</th>\n",
-       "      <th>Tumor Size</th>\n",
-       "      <th>Tumor Stage</th>\n",
-       "      <th>Patient's Vital Status</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MB-0000</td>\n",
-       "      <td>75.65</td>\n",
-       "      <td>Mastectomy</td>\n",
-       "      <td>Breast Cancer</td>\n",
-       "      <td>Breast Invasive Ductal Carcinoma</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>No</td>\n",
-       "      <td>claudin-low</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Positve</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Living</td>\n",
-       "      <td>Negative</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>138.65</td>\n",
-       "      <td>Not Recurred</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>ER-/HER2-</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Living</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MB-0002</td>\n",
-       "      <td>43.19</td>\n",
-       "      <td>Breast Conserving</td>\n",
-       "      <td>Breast Cancer</td>\n",
-       "      <td>Breast Invasive Ductal Carcinoma</td>\n",
-       "      <td>High</td>\n",
-       "      <td>No</td>\n",
-       "      <td>LumA</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Positve</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Living</td>\n",
-       "      <td>Positive</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>83.52</td>\n",
-       "      <td>Not Recurred</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>ER+/HER2- High Prolif</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Living</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MB-0005</td>\n",
-       "      <td>48.87</td>\n",
-       "      <td>Mastectomy</td>\n",
-       "      <td>Breast Cancer</td>\n",
-       "      <td>Breast Invasive Ductal Carcinoma</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>LumB</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Positve</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Deceased</td>\n",
-       "      <td>Positive</td>\n",
-       "      <td>No</td>\n",
-       "      <td>151.28</td>\n",
-       "      <td>Recurred</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Died of Disease</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MB-0006</td>\n",
-       "      <td>47.68</td>\n",
-       "      <td>Mastectomy</td>\n",
-       "      <td>Breast Cancer</td>\n",
-       "      <td>Breast Mixed Ductal and Lobular Carcinoma</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>LumB</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Positve</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Living</td>\n",
-       "      <td>Positive</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>162.76</td>\n",
-       "      <td>Not Recurred</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Living</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MB-0008</td>\n",
-       "      <td>76.97</td>\n",
-       "      <td>Mastectomy</td>\n",
-       "      <td>Breast Cancer</td>\n",
-       "      <td>Breast Mixed Ductal and Lobular Carcinoma</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>LumB</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Positve</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Deceased</td>\n",
-       "      <td>Positive</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>18.55</td>\n",
-       "      <td>Recurred</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>ER+/HER2- High Prolif</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Died of Disease</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>MB-0010</td>\n",
-       "      <td>78.77</td>\n",
-       "      <td>Mastectomy</td>\n",
-       "      <td>Breast Cancer</td>\n",
-       "      <td>Breast Invasive Ductal Carcinoma</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>No</td>\n",
-       "      <td>LumB</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Positve</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Deceased</td>\n",
-       "      <td>Positive</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>2.89</td>\n",
-       "      <td>Recurred</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>ER+/HER2- High Prolif</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Died of Disease</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>MB-0014</td>\n",
-       "      <td>56.45</td>\n",
-       "      <td>Breast Conserving</td>\n",
-       "      <td>Breast Cancer</td>\n",
-       "      <td>Breast Invasive Ductal Carcinoma</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>LumB</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Positve</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Living</td>\n",
-       "      <td>Positive</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>162.17</td>\n",
-       "      <td>Not Recurred</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Living</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>MB-0020</td>\n",
-       "      <td>70.00</td>\n",
-       "      <td>Mastectomy</td>\n",
-       "      <td>Breast Cancer</td>\n",
-       "      <td>Breast Invasive Lobular Carcinoma</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Negative</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Deceased</td>\n",
-       "      <td>Negative</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>11.74</td>\n",
-       "      <td>Recurred</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>ER-/HER2-</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Died of Disease</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>MB-0022</td>\n",
-       "      <td>89.08</td>\n",
-       "      <td>Breast Conserving</td>\n",
-       "      <td>Breast Cancer</td>\n",
-       "      <td>Breast Mixed Ductal and Lobular Carcinoma</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>No</td>\n",
-       "      <td>claudin-low</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Positve</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Deceased</td>\n",
-       "      <td>Negative</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>98.22</td>\n",
-       "      <td>Not Recurred</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Died of Other Causes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>MB-0025</td>\n",
-       "      <td>76.24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Breast Cancer</td>\n",
-       "      <td>Breast Invasive Ductal Carcinoma</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Positve</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>126.32</td>\n",
-       "      <td>Recurred</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10 rows × 34 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Patient ID  Age at Diagnosis Type of Breast Surgery    Cancer Type  \\\n",
-       "0    MB-0000             75.65             Mastectomy  Breast Cancer   \n",
-       "1    MB-0002             43.19      Breast Conserving  Breast Cancer   \n",
-       "2    MB-0005             48.87             Mastectomy  Breast Cancer   \n",
-       "3    MB-0006             47.68             Mastectomy  Breast Cancer   \n",
-       "4    MB-0008             76.97             Mastectomy  Breast Cancer   \n",
-       "5    MB-0010             78.77             Mastectomy  Breast Cancer   \n",
-       "6    MB-0014             56.45      Breast Conserving  Breast Cancer   \n",
-       "7    MB-0020             70.00             Mastectomy  Breast Cancer   \n",
-       "8    MB-0022             89.08      Breast Conserving  Breast Cancer   \n",
-       "9    MB-0025             76.24                    NaN  Breast Cancer   \n",
-       "\n",
-       "                        Cancer Type Detailed Cellularity Chemotherapy  \\\n",
-       "0           Breast Invasive Ductal Carcinoma         NaN           No   \n",
-       "1           Breast Invasive Ductal Carcinoma        High           No   \n",
-       "2           Breast Invasive Ductal Carcinoma        High          Yes   \n",
-       "3  Breast Mixed Ductal and Lobular Carcinoma    Moderate          Yes   \n",
-       "4  Breast Mixed Ductal and Lobular Carcinoma        High          Yes   \n",
-       "5           Breast Invasive Ductal Carcinoma    Moderate           No   \n",
-       "6           Breast Invasive Ductal Carcinoma    Moderate          Yes   \n",
-       "7          Breast Invasive Lobular Carcinoma        High          Yes   \n",
-       "8  Breast Mixed Ductal and Lobular Carcinoma    Moderate           No   \n",
-       "9           Breast Invasive Ductal Carcinoma         NaN          NaN   \n",
-       "\n",
-       "  Pam50 + Claudin-low subtype  Cohort ER status measured by IHC  ...  \\\n",
-       "0                 claudin-low     1.0                   Positve  ...   \n",
-       "1                        LumA     1.0                   Positve  ...   \n",
-       "2                        LumB     1.0                   Positve  ...   \n",
-       "3                        LumB     1.0                   Positve  ...   \n",
-       "4                        LumB     1.0                   Positve  ...   \n",
-       "5                        LumB     1.0                   Positve  ...   \n",
-       "6                        LumB     1.0                   Positve  ...   \n",
-       "7                      Normal     1.0                  Negative  ...   \n",
-       "8                 claudin-low     1.0                   Positve  ...   \n",
-       "9                         NaN     1.0                   Positve  ...   \n",
-       "\n",
-       "  Overall Survival Status  PR Status Radio Therapy  \\\n",
-       "0                  Living   Negative           Yes   \n",
-       "1                  Living   Positive           Yes   \n",
-       "2                Deceased   Positive            No   \n",
-       "3                  Living   Positive           Yes   \n",
-       "4                Deceased   Positive           Yes   \n",
-       "5                Deceased   Positive           Yes   \n",
-       "6                  Living   Positive           Yes   \n",
-       "7                Deceased   Negative           Yes   \n",
-       "8                Deceased   Negative           Yes   \n",
-       "9                     NaN        NaN           NaN   \n",
-       "\n",
-       "  Relapse Free Status (Months) Relapse Free Status     Sex  \\\n",
-       "0                       138.65        Not Recurred  Female   \n",
-       "1                        83.52        Not Recurred  Female   \n",
-       "2                       151.28            Recurred  Female   \n",
-       "3                       162.76        Not Recurred  Female   \n",
-       "4                        18.55            Recurred  Female   \n",
-       "5                         2.89            Recurred  Female   \n",
-       "6                       162.17        Not Recurred  Female   \n",
-       "7                        11.74            Recurred  Female   \n",
-       "8                        98.22        Not Recurred  Female   \n",
-       "9                       126.32            Recurred  Female   \n",
-       "\n",
-       "  3-Gene classifier subtype Tumor Size Tumor Stage  Patient's Vital Status  \n",
-       "0                 ER-/HER2-       22.0         2.0                  Living  \n",
-       "1     ER+/HER2- High Prolif       10.0         1.0                  Living  \n",
-       "2                       NaN       15.0         2.0         Died of Disease  \n",
-       "3                       NaN       25.0         2.0                  Living  \n",
-       "4     ER+/HER2- High Prolif       40.0         2.0         Died of Disease  \n",
-       "5     ER+/HER2- High Prolif       31.0         4.0         Died of Disease  \n",
-       "6                       NaN       10.0         2.0                  Living  \n",
-       "7                 ER-/HER2-       65.0         3.0         Died of Disease  \n",
-       "8                       NaN       29.0         2.0    Died of Other Causes  \n",
-       "9                       NaN       34.0         2.0                     NaN  \n",
-       "\n",
-       "[10 rows x 34 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data2 = pd.read_csv(\"Breast_Cancer.csv\")\n",
-    "data2.head(10)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "30fb9522-2cae-4b92-8f2d-fbb25abd21d4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\siemann\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\extmath.py:1101: RuntimeWarning: invalid value encountered in divide\n",
-      "  updated_mean = (last_sum + new_sum) / updated_sample_count\n",
-      "C:\\Users\\siemann\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\extmath.py:1106: RuntimeWarning: invalid value encountered in divide\n",
-      "  T = new_sum / new_sample_count\n",
-      "C:\\Users\\siemann\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\extmath.py:1126: RuntimeWarning: invalid value encountered in divide\n",
-      "  new_unnormalized_variance -= correction**2 / new_sample_count\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Täpsus: 0.9649122807017544\n",
-      "\n",
-      "Detailne raport:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.96      0.99      0.97        71\n",
-      "           1       0.98      0.93      0.95        43\n",
-      "\n",
-      "    accuracy                           0.96       114\n",
-      "   macro avg       0.97      0.96      0.96       114\n",
-      "weighted avg       0.97      0.96      0.96       114\n",
-=======
    "execution_count": 4,
    "id": "30fb9522-2cae-4b92-8f2d-fbb25abd21d4",
    "metadata": {
@@ -1009,22 +584,10 @@
       "concave points_worst       0.064930    0.099930     0.161400     0.29100  \n",
       "symmetry_worst             0.250400    0.282200     0.317900     0.66380  \n",
       "fractal_dimension_worst    0.071460    0.080040     0.092080     0.20750   \n",
->>>>>>> triin
       "\n"
      ]
     }
    ],
-<<<<<<< HEAD
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28ab1f09-46b7-4393-befb-58bf03abd977",
-   "metadata": {},
-   "outputs": [],
-=======
->>>>>>> triin
    "source": [
     "# 3. BASIC CLEANING\n",
     "# - drop duplicates\n",
