--- a/DataScienceProject.ipynb
+++ b/DataScienceProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 137,
    "id": "8b74222c-479e-4c59-abd6-f11699631b7e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 138,
    "id": "05df440b-4fb7-465e-9cb2-036defe8c6f8",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "(569, 33)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 139,
    "id": "30fb9522-2cae-4b92-8f2d-fbb25abd21d4",
    "metadata": {
     "scrolled": true
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 140,
    "id": "9d6d8cbe-cbc8-44e4-aea7-7c48cf9738c4",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 141,
    "id": "8a767875-a1da-4bdd-9139-c671501c6de4",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 142,
    "id": "7cefadb7-f8e1-446b-92a8-062ec79993fe",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 143,
    "id": "571c95ea-7145-4fb0-8552-b52d6badb16c",
    "metadata": {},
    "outputs": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 144,
    "id": "4ff35d7e-bcab-40b0-8ec2-f7c010f25866",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 153,
    "id": "535a1253-7875-43dc-bbf8-91915a59e833",
    "metadata": {},
    "outputs": [
@@ -699,6 +699,85 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.66\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.65      1.00      0.79        72\n",
+      "           1       1.00      0.07      0.13        42\n",
+      "\n",
+      "    accuracy                           0.66       114\n",
+      "   macro avg       0.82      0.54      0.46       114\n",
+      "weighted avg       0.78      0.66      0.55       114\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.13/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# - RandomForest\n",
+    "rf_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_classifier.fit(x_train, y_train)\n",
+    "y_pred_rf = rf_classifier.predict(x_test)\n",
+    "accuracy_rf = accuracy_score(y_test, y_pred_rf)\n",
+    "classification_rep_rf = classification_report(y_test, y_pred_rf)\n",
+    "print(f\"Accuracy: {accuracy_rf:.2f}\")\n",
+    "print(\"\\nClassification Report:\\n\", classification_rep_rf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "4a061507-9451-4796-a14d-ead25d963714",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.96\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      1.00      0.97        72\n",
+      "           1       1.00      0.90      0.95        42\n",
+      "\n",
+      "    accuracy                           0.96       114\n",
+      "   macro avg       0.97      0.95      0.96       114\n",
+      "weighted avg       0.97      0.96      0.96       114\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# - SVM linear\n",
+    "SVM = SVC(kernel='linear').fit(x_train_scaled, y_train)\n",
+    "y_pred_svm = SVM.predict(x_test_scaled)\n",
+    "accuracy_svm = accuracy_score(y_test, y_pred_svm)\n",
+    "classification_rep_svm = classification_report(y_test, y_pred_svm)\n",
+    "print(f\"Accuracy: {accuracy_svm:.2f}\")\n",
+    "print(\"\\nClassification Report:\\n\", classification_rep_svm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "ceb1211c-9249-4a2d-b5dd-90ad5af7fc87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.97\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
@@ -714,63 +793,18 @@
     }
    ],
    "source": [
-    "# - RandomForest\n",
-    "rf_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-    "rf_classifier.fit(x_train, y_train)\n",
-    "y_pred_rf = rf_classifier.predict(x_test)\n",
-    "accuracy_rf = accuracy_score(y_test, y_pred)\n",
-    "classification_rep_rf = classification_report(y_test, y_pred_rf)\n",
-    "print(f\"Accuracy: {accuracy_rf:.2f}\")\n",
-    "print(\"\\nClassification Report:\\n\", classification_rep_rf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "id": "4a061507-9451-4796-a14d-ead25d963714",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9649122807017544\n"
-     ]
-    }
-   ],
-   "source": [
-    "# - SVM linear\n",
-    "SVM = SVC(kernel='linear').fit(x_train_scaled, y_train)\n",
-    "y_pred_svm = SVM.predict(x_test_scaled)\n",
-    "accuracy_svm = accuracy_score(y_test, y_pred_svm)\n",
-    "print(accuracy_svm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "id": "ceb1211c-9249-4a2d-b5dd-90ad5af7fc87",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9736842105263158\n"
-     ]
-    }
-   ],
-   "source": [
     "# – SVM RBF\n",
     "svm_rbf = SVC(kernel='rbf', gamma='auto', probability=True, random_state=42).fit(x_train_scaled, y_train)\n",
     "y_pred_rbf = svm_rbf.predict(x_test_scaled)\n",
     "accuracy_rbf = accuracy_score(y_test, y_pred_rbf)\n",
-    "print(accuracy_rbf)"
+    "classification_rep_rbf = classification_report(y_test, y_pred_rbf)\n",
+    "print(f\"Accuracy: {accuracy_rbf:.2f}\")\n",
+    "print(\"\\nClassification Report:\\n\", classification_rep_rbf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 148,
    "id": "6b8122ad-7c10-4eec-9afa-0637c93506c5",
    "metadata": {},
    "outputs": [
@@ -804,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 149,
    "id": "a29ea8ad-8195-4b17-88d1-23116c118266",
    "metadata": {},
    "outputs": [
@@ -982,7 +1016,7 @@
        "3            SVM (RBF)  0.973684      1.000  0.928571  0.962963  0.994709"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 150,
    "id": "ec1db08a-54e7-4c7c-b2a6-fab79420d929",
    "metadata": {},
    "outputs": [
