--- a/DataScienceProject.ipynb
+++ b/DataScienceProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 41,
    "id": "8b74222c-479e-4c59-abd6-f11699631b7e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 42,
    "id": "05df440b-4fb7-465e-9cb2-036defe8c6f8",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "(569, 33)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 43,
    "id": "30fb9522-2cae-4b92-8f2d-fbb25abd21d4",
    "metadata": {
     "scrolled": true
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 44,
    "id": "9d6d8cbe-cbc8-44e4-aea7-7c48cf9738c4",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 45,
    "id": "8a767875-a1da-4bdd-9139-c671501c6de4",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 46,
    "id": "7cefadb7-f8e1-446b-92a8-062ec79993fe",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 47,
    "id": "571c95ea-7145-4fb0-8552-b52d6badb16c",
    "metadata": {},
    "outputs": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 48,
    "id": "4ff35d7e-bcab-40b0-8ec2-f7c010f25866",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 49,
    "id": "535a1253-7875-43dc-bbf8-91915a59e833",
    "metadata": {},
    "outputs": [
@@ -698,26 +698,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.66\n",
+      "Accuracy: 0.97\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.65      1.00      0.79        72\n",
-      "           1       1.00      0.07      0.13        42\n",
+      "           0       0.96      1.00      0.98        72\n",
+      "           1       1.00      0.93      0.96        42\n",
       "\n",
-      "    accuracy                           0.66       114\n",
-      "   macro avg       0.82      0.54      0.46       114\n",
-      "weighted avg       0.78      0.66      0.55       114\n",
+      "    accuracy                           0.97       114\n",
+      "   macro avg       0.98      0.96      0.97       114\n",
+      "weighted avg       0.97      0.97      0.97       114\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.13/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -734,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 50,
    "id": "4a061507-9451-4796-a14d-ead25d963714",
    "metadata": {},
    "outputs": [
@@ -769,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 51,
    "id": "ceb1211c-9249-4a2d-b5dd-90ad5af7fc87",
    "metadata": {},
    "outputs": [
@@ -804,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 52,
    "id": "6b8122ad-7c10-4eec-9afa-0637c93506c5",
    "metadata": {},
    "outputs": [
@@ -820,6 +812,7 @@
     }
    ],
    "source": [
+    "# 7. ANALYSING RESULTS\n",
     "# - ROC curve\n",
     "probs = svm_rbf.predict_proba(x_test_scaled)[:, 1]\n",
     "fpr, tpr, thresholds = roc_curve(y_test, probs)\n",
@@ -838,10 +831,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 53,
    "id": "a29ea8ad-8195-4b17-88d1-23116c118266",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\siemann\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\validation.py:2732: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -852,14 +853,6 @@
       "Recall: 0.929\n",
       "F1-score: 0.951\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.13/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
-      "  warnings.warn(\n"
      ]
     },
     {
@@ -877,7 +870,7 @@
      "output_type": "stream",
      "text": [
       "Random Forest metrics:\n",
-      "Accuracy: 0.658\n",
+      "Accuracy: 0.974\n",
       "Precision: 1.000\n",
       "Recall: 0.929\n",
       "F1-score: 0.963\n",
@@ -980,7 +973,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.657895</td>\n",
+       "      <td>0.973684</td>\n",
        "      <td>1.000</td>\n",
        "      <td>0.928571</td>\n",
        "      <td>0.962963</td>\n",
@@ -1011,12 +1004,12 @@
       "text/plain": [
        "                 Model  Accuracy  Precision    Recall        F1       AUC\n",
        "0  Logistic Regression  0.964912      0.975  0.928571  0.951220  0.500000\n",
-       "1        Random Forest  0.657895      1.000  0.928571  0.962963  0.992890\n",
+       "1        Random Forest  0.973684      1.000  0.928571  0.962963  0.992890\n",
        "2         SVM (linear)  0.964912      1.000  0.904762  0.950000  0.991402\n",
        "3            SVM (RBF)  0.973684      1.000  0.928571  0.962963  0.994709"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 54,
    "id": "ec1db08a-54e7-4c7c-b2a6-fab79420d929",
    "metadata": {},
    "outputs": [
@@ -1100,9 +1093,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
